themepicker fix, improved content spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,6 +48,10 @@
     .hero-fixed-bg::before {
         clip-path: polygon(100% 0%, 0% 0% , 0.00% 100.00%, 2.00% 99.98%, 4.00% 99.91%, 6.00% 99.79%, 8.00% 99.62%, 10.00% 99.41%, 12.00% 99.16%, 14.00% 98.87%, 16.00% 98.53%, 18.00% 98.15%, 20.00% 97.74%, 22.00% 97.29%, 24.00% 96.82%, 26.00% 96.31%, 28.00% 95.77%, 30.00% 95.21%, 32.00% 94.64%, 34.00% 94.04%, 36.00% 93.43%, 38.00% 92.81%, 40.00% 92.19%, 42.00% 91.56%, 44.00% 90.93%, 46.00% 90.31%, 48.00% 89.70%, 50.00% 89.09%, 52.00% 88.50%, 54.00% 87.93%, 56.00% 87.38%, 58.00% 86.85%, 60.00% 86.35%, 62.00% 85.89%, 64.00% 85.45%, 66.00% 85.05%, 68.00% 84.69%, 70.00% 84.36%, 72.00% 84.08%, 74.00% 83.84%, 76.00% 83.65%, 78.00% 83.50%, 80.00% 83.40%, 82.00% 83.34%, 84.00% 83.34%, 86.00% 83.38%, 88.00% 83.46%, 90.00% 83.60%, 92.00% 83.77%, 94.00% 84.00%, 96.00% 84.27%, 98.00% 84.58%, 100.00% 84.92%);    
     }
+
+    .hero-band-fixed-bg::before {
+        clip-path: polygon(100% 100%, 0% 100% , 0.00% 19.36%, 2.00% 19.33%, 4.00% 19.25%, 6.00% 19.12%, 8.00% 18.94%, 10.00% 18.70%, 12.00% 18.42%, 14.00% 18.08%, 16.00% 17.70%, 18.00% 17.28%, 20.00% 16.81%, 22.00% 16.31%, 24.00% 15.77%, 26.00% 15.20%, 28.00% 14.59%, 30.00% 13.96%, 32.00% 13.31%, 34.00% 12.64%, 36.00% 11.95%, 38.00% 11.26%, 40.00% 10.55%, 42.00% 9.84%, 44.00% 9.14%, 46.00% 8.43%, 48.00% 7.74%, 50.00% 7.06%, 52.00% 6.39%, 54.00% 5.75%, 56.00% 5.13%, 58.00% 4.53%, 60.00% 3.97%, 62.00% 3.44%, 64.00% 2.95%, 66.00% 2.50%, 68.00% 2.09%, 70.00% 1.73%, 72.00% 1.41%, 74.00% 1.14%, 76.00% 0.92%, 78.00% 0.75%, 80.00% 0.64%, 82.00% 0.58%, 84.00% 0.57%, 86.00% 0.61%, 88.00% 0.71%, 90.00% 0.86%, 92.00% 1.06%, 94.00% 1.31%, 96.00% 1.62%, 98.00% 1.96%, 100.00% 2.36%);
+    }
 }
 
 @include media-breakpoint-down(lg) {
